# manipulability_metrics

./: .gitmodules  README.md  README_UR5.md  set_ROS_slave.sh
blue_arm_description/: package.xml
docker/: Dockerfile  build.sh  prev_1Dockerfile  run.sh
manipulability_metrics/: CMakeLists.txt
manipulability_metrics_examples/: CMakeLists.txt
manipulability_metrics_examples/config/: dual_panda_demo.rviz  panda_demo.rviz  timda_dual_arm_demo.rviz  timda_left_joints.yaml  timda_right_joints.yaml  timda_zeros.yaml
manipulability_metrics_examples/config/blue_arm/: blue_arm_joints.yaml  blue_arm_zeros.yaml
manipulability_metrics_examples/config/dual_panda/: dual_panda_demo.rviz
manipulability_metrics_examples/config/iiwa/: iiwa_demo.rviz  iiwa_joints.yaml  iiwa_zeros.yaml
manipulability_metrics_examples/config/kr6/: kr6_joints.yaml  kr6_zeros.yaml
manipulability_metrics_examples/config/panda/: panda_demo.rviz
manipulability_metrics_examples/config/timda_dual7/: timda_dual7.rviz  timda_left_joints.yaml  timda_right_joints.yaml
manipulability_metrics_examples/config/timda_dual8/: timda_left_joints.yaml  timda_right_joints.yaml
manipulability_metrics_examples/config/timda_single7/: timda_single7_zeros.yaml
manipulability_metrics_examples/config/timda_single8/: timda_single8_demo.rviz  timda_single8_joints.yaml  timda_single8_zeros.yaml
manipulability_metrics_examples/config/ur5/: ur5_zeros.yaml
manipulability_metrics_examples/config/ur5e/: ur5e_demo.rviz  ur5e_zeros.yaml
manipulability_metrics_examples/launch/: blue_arm_manipulability_demo.launch  dual_panda_manipulability_demo.launch  iiwa7_manipulability_demo.launch  iiwa_manipulability_demo.launch  kr6_manipulability_demo.launch  panda_manipulability_demo.launch  timda_dual7_manipulability_demo.launch  timda_dual8_manipulability_demo.launch  timda_manipulability_demo.launch  timda_single7_manipulability_demo.launch  timda_single8_manipulability_demo.launch  ur5_manipulability_demo.launch
manipulability_metrics_examples/src/: dual_manipulability_demo.cpp  single_manipulability_demo.cpp  timda_manipulability_demo.cpp  ur5_manipulability_demo.cpp
manipulability_metrics_examples/urdf/: blue_arm.xacro  dual_panda.urdf.xacro  panda.urdf.xacro  timda_dual7.xacro  timda_dual7_cam.xacro  timda_dual8.xacro  timda_dual8_cam.xacro  timda_dual_arm.xacro  timda_single7_todo.xacro  timda_single8.xacro  timda_single8_cam.xacro  timda_single8_dh.xacro
plan_robot_path/: CMakeLists.txt  package.xml
robot_models/timda/single_arm_description/: package.xml
robot_models/timda/single_arm_description/launch/: display.launch  single_arm.rviz
robot_models/timda/single_arm_description/urdf/: single_arm_cam.urdf.xacro  timda_single7_dh.urdf.xacro
robot_models/timda/timda_body/: CMakeLists.txt  package.xml
robot_models/timda/timda_body/launch/: display.launch  timda_body.rviz
robot_models/timda/timda_body/urdf/: fixed_timda_body.xacro  timda_body_onlyR.xacro
rs/launch/: gazebo.launch
ur_description/: package.xml
ur_description/urdf/: ur.urdf.xacro
(+637 files in other folders)
