<package format="2">
  <name>ur_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ur</p>
    <p>This package contains configuration data, 3D models and launch files for blue_arm robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
</package>
