<?xml version="1.0"?>
<package>
  <name>single_arm_description</name>
  <version>0.0.0</version>
  <description>The single_arm_description package</description>

  <maintainer email="errrr0501done@gmail.com">TaiTing Tsai</maintainer>
  <license>Apache 2.0</license>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>gazebo</run_depend>

  <export>
  </export>
</package>
